fix overflow

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -37,7 +37,7 @@ body {
   width: 100%;
   margin: 0%;
   padding: 0%;
-  overflow: hidden;
+  overflow-x: hidden;
   background-color: var(--background-color);
   color: var(--font-color);
 }
